--- a/personalPage.html
+++ b/personalPage.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <img src="IMG_2511.HEIC" alt="">
+        <img src="asset/IMG_2511.HEIC" alt="">
         <div class="context">
             <div class="icon"></div>
             <div class="personal-info py-2">
